--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <link rel="icon" type="image/jpg" href="/Logo.jpg" />
+    <title>Kosisochukwu Ugwu</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Lora:wght@400;500&display=swap" rel="stylesheet">
+    
+
   </head>
   <body>
     <div id="root"></div>
